k6/tests/policies/cm-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Audit
  background: false
  rules:
    - name: require-team-1
      match:
        any:
          - resources:
              kinds:
                - ConfigMap
      validate:
        message: 'The label `team` is required.'
        pattern:
          metadata:
            labels:
              team: '?*'
    - name: require-team-2
      match:
        any:
          - resources:
              kinds:
                - ConfigMap
      validate:
        message: 'The label `team` is required.'
        pattern:
          metadata:
            labels:
              team: '?*'
    - name: require-team-3
      match:
        any:
          - resources:
              kinds:
                - ConfigMap
      validate:
        message: 'The label `team` is required.'
        pattern:
          metadata:
            labels:
              team: '?*'
